--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.1.1",
+    "@react-pdf/renderer": "^4.0.0",
     "@sentry/nextjs": "^8.9.2",
     "@tanstack/react-table": "^8.17.0",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.5",
+    "chartjs-to-image": "^1.2.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -39,6 +42,7 @@
     "node-appwrite": "^12.0.1",
     "prettier": "^3.2.5",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
