--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "@sentry/nextjs": "^8.9.2",
     "@tanstack/react-table": "^8.17.0",
     "axios": "^1.7.7",
+    "bootstrap": "^5.3.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-tailwindcss": "^3.15.1",
+    "file-saver": "^2.0.5",
     "fs": "^0.0.1-security",
     "input-otp": "^1.2.4",
     "js-cookie": "^3.0.5",
@@ -38,6 +40,7 @@
     "node-appwrite": "^12.0.1",
     "prettier": "^3.2.5",
     "react": "^18",
+    "react-bootstrap": "^2.10.5",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
