--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@hookform/resolvers": "^3.3.4",
+    "@mui/material": "^6.1.4",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -52,6 +55,7 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.51.4",
     "react-icons": "^5.3.0",
+    "react-pdf": "^9.1.1",
     "react-phone-number-input": "^3.4.1",
     "recharts": "^2.13.0",
     "tailwind-merge": "^2.3.0",
