--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-icons": "^5.3.0",
     "react-pdf": "^9.1.1",
     "react-phone-number-input": "^3.4.1",
+    "react-router-dom": "^6.27.0",
     "recharts": "^2.13.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
