--- a/package.json
+++ b/package.json
@@ -33,12 +33,14 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-tailwindcss": "^3.15.1",
+    "file-saver": "^2.0.5",
     "fs": "^0.0.1-security",
     "input-otp": "^1.2.4",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.378.0",
     "mdb-react-ui-kit": "^9.0.0",
     "next": "14.2.3",
+    "next-cookies": "^2.0.3",
     "next-themes": "^0.3.0",
     "node-appwrite": "^12.0.1",
     "prettier": "^3.2.5",
@@ -48,6 +50,7 @@
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.51.4",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-phone-number-input": "^3.4.1",
     "recharts": "^2.13.0",
