--- a/backend/package.json
+++ b/backend/package.json
@@ -19,11 +19,15 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.1",
+    "node-mocks-http": "^1.16.1",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.7",
     "supertest": "^7.0.0"
   },
   "devDependencies": {
-    "jest": "^29.7.0"
+    "chai": "^5.1.1",
+    "jest": "^29.7.0",
+    "mocha": "^10.7.3",
+    "sinon": "^19.0.2"
   }
 }
