--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@heroicons/react": "^2.1.5",
     "@hookform/resolvers": "^3.3.4",
+    "@material-tailwind/react": "^2.1.10",
     "@mui/icons-material": "^6.1.4",
     "@mui/material": "^6.1.4",
     "@radix-ui/react-alert-dialog": "^1.0.5",
@@ -59,6 +61,7 @@
     "react-icons": "^5.3.0",
     "react-pdf": "^9.1.1",
     "react-phone-number-input": "^3.4.1",
+    "react-router-dom": "^6.27.0",
     "recharts": "^2.13.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
